=========
CHANGELOG
=========

0.19 (unreleased)
-----------------

* Intervention length field (readonly if geometry is line)
* Fix apparence bug if no rights to add treks (fixes #713)


0.18 (2013-06-06)
-----------------

* Add pretty trek duration in JSON
* Add information desk field in Trek (fixes #624)
* Map screenshot fix (ref #597)"
* Default values for most Path DB columns (fixes #965)
* Trek printable version looks for OpenDocument (*.odt) named "docprint" in attachments (fixes #686)
* Show structure column and filter in admin (fixes #699)
* Path snapping now uses 2D distance to prevent weird behaviour (fixes #697)
* Fix display of path comfort in detail page (fixes #701)
* Compile translations of apps under development (fixes #704)
* Fix display of total manday in intervention detail
* Fix field display in intervention creation (fixes #703)
* Fix surface computation (fixes #708)
* Fix shapefile serialization if path has no trail (fixes #706)


0.17 (2013-05-17)
-----------------

* Show trek duration as human readable in minutes, hours and days (fixes #471, #683)
* Fix hover on paths that interfered with clic for topology creation (fixes #680)
* Run API urls on different workers (ref #672)
* Fix redirect to root url after logout (fixes #264)
* Fix redirect to next after login (fixes #381)
* Switch to Memcached instead of local memory in production
* Move secret key to settings.ini
* Relate paperclip FileType to Structure (fixes #256)
* Relate PhysicalTypes to Structure (fixes #255)
* Relate Organisms to Structure (fixes #263)
* Compute max_resolution automatically
* Fix creation and edition of interventions on infrastructures (fixes #678)
* Change default objects color to yellow
* Restored Italian translations
* Fix regex for RAISE NOTICE (fixes #673)
* Initial public version

See project history in `docs/history.rst` (French).